# pi-card

./: .gitignore  Acceptance_Test_Rules.md  Build_Order.md  Hardware_Interfaces.md  Language_Switching.md  Makefile  Manual_Gates.md  Project_Overview.md  config.yaml.example  pyproject.toml  run-tests.sh
.claude/: CLAUDE.md
src/pi_card/: __main__.py  assistant.py  audio_tones.py  cli.py  config.py  conversation.py  messages.py
src/pi_card/adapters/: openai_agent.py  respeaker_input.py  respeaker_leds.py  usb_speaker.py
src/pi_card/hardware/: __init__.py  ai_agent.py  audio_input.py  audio_output.py  leds.py
src/pi_card/pipeline/: capture.py  stt.py  tts.py  wake_word.py
systemd/: pi-card.service.in
tests/: conftest.py  test_audio_tones.py  test_capture.py  test_cli.py  test_fake_audio_input.py  test_messages.py
tests/dsl/: actions.py  assertions.py  world.py
tests/fakes/: ai_agent.py  audio_input.py  audio_output.py  leds.py  piper_voice.py  wake_word_engine.py  whisper_model.py
tests/features/: test_ai_agent.py  test_configuration.py  test_conversation_flow.py  test_error_handling.py  test_openai_agent.py  test_smoke.py  test_speech_to_text.py  test_text_to_speech.py  test_wake_word.py
