[project]
name = "pi-card"
version = "0.1.0"
description = "Raspberry Pi AI voice assistant"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26,<2",
    "openwakeword>=0.6",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "openai>=1.0",
    "sounddevice>=0.4",
    "spidev>=3.6",
    "gpiozero>=2.0",
    "lgpio>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_card"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
tflite-runtime = { index = "pypi" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
